--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@langchain/community": "^0.3.46",
+    "@langchain/core": "^0.3.58",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.2",
     "zod": "^3.25.63"
