--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "motion": "^12.19.2",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.2",
     "zod": "^3.25.63"
